fix(VCard): fix word wrapping & color (#8380)
* fix(vcard): fix text color in nested v-card

fixes #7920

* fix(vcard): fix long words overflow on small screens

fixes #7730

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -5,7 +5,7 @@
   background-color: map-get($material, 'cards')
   color: map-deep-get($material, 'text', 'primary')
 
-  .v-card__text
+  > .v-card__text
     color: map-deep-get($material, 'text', 'secondary')
 
   &.v-card--outlined
@@ -17,6 +17,8 @@
   outline: none
   text-decoration: none
   transition-property: box-shadow, opacity
+  word-break: break-word
+  overflow-wrap: break-word
   +elevation(2)
 
   > *:first-child:not(.v-btn):not(.v-chip),
